Fixed flickering screen issue on page change
Fixed an issue with the screen flickering during page changes. The issue
comes from the fact that the footer would jump to the top of the page
when there is no content during page changes. A fixed min-height has
been added to the ng-view div element to keep the footer outside the
range of the page.

Also removed the extra margin at the bottom of the footer.

--- a/app/css/epochtalk.css
+++ b/app/css/epochtalk.css
@@ -5,6 +5,8 @@ body {
 
 .padding-top-15 { padding-top: 15px; }
 
+.page-height { min-height: 80%;}
+
 .breadcrumbs > .news:before {
   content: "";
   margin: 0 0;
